<?xml version="1.0" encoding="utf-8"?>
    <layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.MyProfileActivity">

    <TextView
        android:id="@+id/tvProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/create_profile"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19" />

    <ImageView
        android:id="@+id/ivProfileImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/profile"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProfile"
        app:srcCompat="@drawable/ic_launcher_background" />

    <EditText
        android:id="@+id/etFullName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="@string/full_name"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="text"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivProfileImg" />

    <EditText
        android:id="@+id/etStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/status"
        android:ems="10"
        android:hint="@string/status"
        android:inputType="text"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="@+id/etFullName"
        app:layout_constraintStart_toStartOf="@+id/etFullName"
        app:layout_constraintTop_toBottomOf="@+id/etFullName" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="@+id/etPinCode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPinCode" />

    <EditText
        android:id="@+id/etCity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/city"
        android:ems="10"
        android:hint="@string/city"
        android:inputType="text"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="@+id/etStatus"
        app:layout_constraintStart_toStartOf="@+id/etStatus"
        app:layout_constraintTop_toBottomOf="@+id/etStatus" />

    <EditText
        android:id="@+id/etPinCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/pincode"
        android:ems="10"
        android:hint="@string/pincode"
        android:inputType="number"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="@+id/etCity"
        app:layout_constraintStart_toStartOf="@+id/etCity"
        app:layout_constraintTop_toBottomOf="@+id/etCity" />
</androidx.constraintlayout.widget.ConstraintLayout>
    </layout>